--- a/joki.css
+++ b/joki.css
@@ -21,8 +21,8 @@ img.hdr {
 }
 
 form {
-  width: 290px;
-  height: 325px;
+  width: 400px;
+  height: 550px;
   margin: 0 auto;
   background-color: #fff;
   padding: 10px;
@@ -65,6 +65,28 @@ select#tugas {
   font-size: 15px;
 }
 
+select#jenjang {
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 8px;
+  background-color: white;
+  font-size: 15px;
+}
+
+select#jenjang {
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 8px;
+  background-color: white;
+  font-size: 15px;
+}
+
 input[type="submit"] {
   background-color: #fff;
   color: #4CAF50;
@@ -75,7 +97,10 @@ input[type="submit"] {
   width: 120px;
   font-size: 15px;
   transition: 0.3s ease;
+  margin: 20px 0;
 }
+
+
 
 input[type="submit"]:hover {
   background-color: #4CAF50;
@@ -83,12 +108,26 @@ input[type="submit"]:hover {
 }
 
 h3#ftr {
-  margin-top: 5px;
+  margin-top: 9px;
   font-family: verdana;
   font-size: 10px;
   margin-left: 5px;
   color: #4CAF50;
 }
+
+.note {
+  padding: 5px; /* Jarak dalam */
+  text-align: center; /* Pusatkan teks */
+  font-size: 14px; /* Ukuran font */
+  color: #333; /* Warna teks */
+  line-height: 1.5; /* Jarak antar baris */
+  height: 100px;
+}
+
+.note {
+  margin: 0; /* Hilangkan margin default */
+}
+
 
 @media screen and (min-width: 600px) {
  
